@@ -8,6 +8,9 @@ Changes from 2.0 series to 2.1
 * Added compatibility with Python 2.5 (2.4 is definitely not supported
   anymore).
 
+* `numexpr.evaluate` is better documented, in particular the new
+  `out`, `order` and `casting` parameters.
+
 
 Changes from 1.x series to 2.0
 ==============================
